# finn_ads

./: README.md  adstttt.txt  pyproject.toml  task.md
data/: ads.txt
finn_ads/: analyze_ads.py  main.py  rw_ads.py  types_finn_ads.py
